--- a/modal.html
+++ b/modal.html
@@ -83,7 +83,7 @@
 			
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-6"><input type="submit" value="Register" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+                <div class="col-xs-12 col-md-6"><a href="#" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#myModal2">Register</a></div>
 				<div class="col-xs-12 col-md-6"><a href="#" class="btn btn-success btn-block btn-lg">Sign In</a></div>
 			</div>
 		</form>
@@ -98,7 +98,7 @@
 				<h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
 			</div>
 			<div class="modal-body">
-                            <p> Welcome to Step by Step	
+                            <p> *Terms & Conditions*
                         </div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
@@ -116,6 +116,23 @@
   </div>
 </div>
 
+<!-- modal 2/ success modal -->
+<div class="modal fade" id="myModal2" role="dialog">
+    <div class="modal-dialog modal-sm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Success!</h4>
+        </div>
+        <div class="modal-body">
+          <p>Thank you for registering with us!<p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
@@ -183,6 +200,7 @@
         }
         init();
     });
+    
 });
     </script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
